--- a/Homework1-responsive/index.html
+++ b/Homework1-responsive/index.html
@@ -5,7 +5,7 @@
     <title>Homework 1</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="img/png" >
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
     <div class="content">
